opam-version: "1.2"
homepage:     "https://github.com/pqwy/notty"
dev-repo:     "https://github.com/pqwy/notty.git"
bug-reports:  "https://github.com/pqwy/notty/issues"
doc:          "http://pqwy.github.io/notty/doc"
author:       "David Kaloper <david@numm.org>"
maintainer:   "David Kaloper <david@numm.org>"
license:      "ISC"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.1"}
  "uchar"
  "uucp" {>= "2.0.0"}
  "uuseg" {>= "1.0.0"}
  "uutf" {>= "1.0.0"}
]
conflicts: [
  "ocb-stubblr" {<"0.1.0"}
  "lwt" {<"2.5.2"}
]
available: [ ocaml-version >= "4.03.0" ]
