opam-version: "2.0"
homepage:     "https://github.com/pqwy/notty"
dev-repo:     "git+https://github.com/pqwy/notty.git"
bug-reports:  "https://github.com/pqwy/notty/issues"
doc:          "http://pqwy.github.io/notty/doc"
author:       "David Kaloper <dk505@cam.ac.uk>"
maintainer:   "David Kaloper <dk505@cam.ac.uk>"
license:      "ISC"
synopsis:     "Declaring terminals"
description:
  "Notty is a declarative terminal library for OCaml structured around a notion
  of composable images. It tries to abstract away the basic terminal programming
  model, providing something simpler and more expressive."

build: [ [ "dune" "subst" ] {dev}
         [ "dune" "build" "-p" name "-j" jobs ] ]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.7"}
  "cppo" {build & >= "1.1.0"}
  "uutf" {>= "1.0.0"}
]
depopts: [ "lwt" ]
conflicts: [ "lwt" {<"2.5.2"} ]
