opam-version: "1.2"
homepage:     "https://github.com/pqwy/notty"
dev-repo:     "https://github.com/pqwy/notty.git"
bug-reports:  "https://github.com/pqwy/notty/issues"
author:       "David Kaloper <david@numm.org>"
maintainer:   "David Kaloper <david@numm.org>"
license:      "ISC"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build & >= "1.1"}
  "notty"
  "lwt" {>= "2.5.2"}
]
available: [ ocaml-version >= "4.02.0" ]
